Closed Bug 1150384 Opened 10 years ago Closed 10 years ago

IonMonkey: MIPS: Fix build failure caused by Bug 1143011.

Categories

(Core :: JavaScript Engine: JIT, defect)

Other
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla40
Tracking Status
firefox40 --- fixed

People

(Reporter: hev, Assigned: hev)

Details

Attachments

(1 file)

/home/heiher/git/loongson/gecko-dev/js/src/jit/mips/Architecture-mips.cpp:109:17: error: ‘js::jit::FloatRegisterSet’ has no member named ‘addUnchecked’ mod.addUnchecked((*iter).doubleOverlay()); /home/heiher/git/loongson/gecko-dev/js/src/jit/mips/Architecture-mips.cpp:111:17: error: ‘js::jit::FloatRegisterSet’ has no member named ‘addUnchecked’ mod.addUnchecked(*iter); /home/heiher/git/loongson/gecko-dev/js/src/jit/mips/BaselineIC-mips.cpp:84:58: error: conversion from ‘js::jit::AllocatableGeneralRegist erSet {aka js::jit::AllocatableSet<js::jit::TypedRegisterSet<js::jit::Register> >}’ to non-scalar type ‘js::jit::GeneralRegisterSet {aka js::jit::TypedRegisterSet<js::jit::Register>}’ requested GeneralRegisterSet savedRegs = availableGeneralRegs(2); ....
Attachment #8587206 - Flags: review?(branislav.rankov)
Comment on attachment 8587206 [details] [diff] [review] IonMonkey-MIPS-Fix-build-failure-caused-by-Bug-11430.patch Review of attachment 8587206 [details] [diff] [review]: ----------------------------------------------------------------- ::: js/src/jit/mips/BaselineIC-mips.cpp @@ +81,5 @@ > Register scratchReg = R2.payloadReg(); > > // DIV and MOD need an extra non-volatile ValueOperand to hold R0. > + AllocatableGeneralRegisterSet savedRegs(availableGeneralRegs(2)); > + savedRegs.set() = GeneralRegisterSet::Intersect(GeneralRegisterSet::NonVolatile(), savedRegs.set()); nit: this line is too long. It should be less than 99 characters.
Attachment #8587206 - Flags: review?(branislav.rankov) → review+
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: