Bug 1150384 - IonMonkey: MIPS: Fix build failure caused by Bug 1143011. r=rankov